cloudformation-laravel-webapp-infra-example_0100.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation Laravel WebApp Infrastructure Example (Fully Defined)

Parameters:
  RDSMasterUsername:
    Type: String
    Description: The database admin account name
    Default: admin
    MinLength: 1
    MaxLength: 16
    AllowedPattern: '^[a-zA-Z0-9]*$'

  RDSMasterUserPassword:
    Type: String
    Description: The database admin account password
    MinLength: 8
    AllowedPattern: "^[a-zA-Z0-9-!\\_]*$"
    NoEcho: true

  RDSDBName:
    Type: String
    Description: The database name
    Default: demo_db
    MinLength: 1
    MaxLength: 16
    AllowedPattern: '^[a-zA-Z0-9_]*$'

  KeyName:
    Type: String
    Description: The Key Name

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: demo-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: demo-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.100.0/24
      AvailabilityZone: ap-northeast-1a
      Tags:
        - Key: Name
          Value: demo-subnet-public-a

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.200.0/24
      AvailabilityZone: ap-northeast-1a
      Tags:
        - Key: Name
          Value: demo-subnet-private-a

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.201.0/24
      AvailabilityZone: ap-northeast-1c
      Tags:
        - Key: Name
          Value: demo-subnet-private-b

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: demo-public-route-table

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: demo-nat-gateway-eip

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: demo-nat-gateway

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: demo-private-route-table

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PrivateSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTable

  MyEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: demo-ec2-security-group

  MyRDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow RDS access from EC2
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref MyEC2SecurityGroup
      Tags:
        - Key: Name
          Value: demo-rds-security-group

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: RDS Subnet Group
      SubnetIds:
        - !Ref PrivateSubnetA
        - !Ref PrivateSubnetB
      Tags:
        - Key: Name
          Value: demo-db-subnet-group

  WebServerBridge:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-012261b9035f8f938
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref PublicSubnetA
          GroupSet:
            - !Ref MyEC2SecurityGroup
      Tags:
        - Key: Name
          Value: WebServerBridge

  WebServerDevelop:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-012261b9035f8f938
      InstanceType: t2.micro
      SubnetId: !Ref PrivateSubnetA
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref MyEC2SecurityGroup
      Tags:
        - Key: Name
          Value: demo-webserver-develop

  WebServerStaging:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-012261b9035f8f938
      InstanceType: t2.micro
      SubnetId: !Ref PrivateSubnetB
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref MyEC2SecurityGroup
      Tags:
        - Key: Name
          Value: demo-webserver-staging

  MyRDSInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      DBInstanceClass: db.t3.micro
      DBInstanceIdentifier: demo-db-instance
      DBSubnetGroupName: !Ref DBSubnetGroup
      Engine: mysql
      MasterUsername: !Ref RDSMasterUsername
      MasterUserPassword: !Ref RDSMasterUserPassword
      DBName: !Ref RDSDBName
      StorageType: gp3
      MultiAZ: false
      VPCSecurityGroups:
        - !Ref MyRDSSecurityGroup
      Tags:
        - Key: Name
          Value: demo-rds

  MyRDSReadReplicaInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t3.micro
      DBInstanceIdentifier: demo-db-read-instance
      SourceDBInstanceIdentifier: !Ref MyRDSInstance
      Engine: mysql
      StorageType: gp3
      MultiAZ: false
      VPCSecurityGroups:
        - !Ref MyRDSSecurityGroup
      Tags:
        - Key: Name
          Value: demo-rds-read-replica

Outputs:
  BridgePublicIP:
    Value: !GetAtt WebServerBridge.PublicIp
    Description: Public IP of the bridge server
